# ABCMB-k

./: .gitignore  .readthedocs.yaml  CHANGELOG.txt  CLAUDE.md  LICENSE  MWE2.py  README.md  diagnose_reaction_fields.py  diagnose_unhashable_attributes.py  diagnose_weakrates_fields.py  equinox_jit_mwe.py  eqx_jit.py  plan.md  pytest_requirements.txt  requirements.txt  setup.cfg  setup.py  test_abundance_hashability.py  test_backend_parameter_diagnosis.py  test_final_diagnosis.py  test_hash_diagnosis.py  test_inline_jit_backend.py  test_jax_array_diagnosis.py  test_nested_static_diagnosis.py  test_nuclear_init_trace.py  test_reaction_fields.py  test_reaction_init_step.py  test_static_field_diagnosis.py  time_tests.py
ABCMB/: ABCMBTools.py  AbstractSpecies.py  background.py  cosmology.py  main.py  model_specs.py  perturbations.py  preparations.py  sBBN_2025_CLASS.txt  setup.py  species.py  spectrum.py
Module_Tests/: Bessel.ipynb  background_test.ipynb  paper_plots.ipynb  spectrum_test.ipynb
abcmb/: ABCMBTools.py  __init__.py  background.py  constants.py  main.py  model_specs.py  perturbations.py  setup.py  species.py  spectrum.py
bench/: .jobid_a  .jobid_b  accuracy_gate.py  analyze_estop.py  analyze_estop.slurm  baseline.py  baseline_stepcounts.npz  baseline_summary.txt  batched_ad_design.md  battle_royale_brief.md  bbn_repro_check.py  cache_diag.py  cache_probe.py  calib_result_ln10As_l2508.txt  calib_result_tau_omegacdm_l2508.txt  calib_trace_ln10As_l2508.npz  calib_trace_tau_omegacdm_l2508.npz  chunking_debug_report.md  decision.py  design_memo.md  diag_ad_at_ckpt.py  diag_ad_at_ckpt.slurm  diag_ad_stall.py  diag_ad_stall.slurm  diag_consistency.py  diag_fscan.py  diag_fscan.slurm  driver_batched_wiring.md  flipped_multigpu_stepcounts.npz  flipped_spike.py  (+66 more)
(+224 files in other folders)
