[metadata]
name = ABCMB
version = attr: abcmb.version.__version__
author = Zilu Zhou, Cara Giovanetti, Hongwan Liu
author_email = cgiovanetti@lbl.gov
keywords = cosmology, differentiable, CMB, physics, JAX

# add a description of your package
description = A fast, differentiable, and extensible CMB code
long_description = file: README.md
long_description_content_type = text/markdown

# add the url to your repository/homepage and version release
url = https://github.com/TonyZhou729/ABCMB

# define your license and license file
license = MIT

classifiers=
        Development Status :: 1 - Planning
        Intended Audience :: Science/Research
        Operating System :: POSIX :: Linux       
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        Programming Language :: Python :: 3.13
        Programming Language :: Python :: 3.14

[options]

packages = find:
include_package_data = True

install_requires =
    numpy
    scipy
    matplotlib
    diffrax
    equinox==0.13.2
    interpax
    jax==0.8.1
    pytest        

python_requires = >=3.8


[options.packages.find]
include =
    abcmb
    abcmb.*

[options.package_data]
abcmb =
    bessel_tab/*.txt
    hyrex/tabs/*.dat
    linx/data/*
    linx/data/background/*.txt
    linx/data/nuclear_rates/key_PRIMAT_2018/*.txt
    linx/data/nuclear_rates/key_PRIMAT_2023/*.txt
    linx/data/nuclear_rates/key_YOF/*.txt
    linx/data/nuclear_rates/other_PRIMAT_2023/*.txt
    linx/data/weak_thermal_corrections/*.txt
    sBBN_2025_CLASS.txt


